docs/sase/api/insights/2.0/custom-resource-query.api.mdx
---
id: custom-resource-query
sidebar_label: Custom resource query
hide_title: true
hide_table_of_contents: true
api: {"description":"Retrieves information about a custom resource. \nThe following feature/resource name combinations are supported:\n\n* mobileusers/mu_concurrent_connected_status\n\n  Provides data on connected mobile users.\n\n* locations/location_mobilegateways_status\n\n  Provides data on mobile users service availability.\n","operationId":"post-api-sase-v2.0-resource-custom-query-feature_name-request_name","parameters":[{"in":"path","name":"feature_name","required":true,"schema":{"type":"string"}},{"content":{"*/*":{"schema":{"enum":["query1","query2"]}}},"description":"Name of the custom request.","in":"path","name":"request_name","required":true},{"description":"Unique tenant ID.","in":"path","name":"tenant_id","required":true,"schema":{"type":"string"}},{"description":"Sub-tenant ID. This parameter is required only if a sub-tenant is configured.","in":"header","name":"Prisma-SubTenant","required":false,"schema":{"type":"string"}}],"requestBody":{"content":{"application/json":{"schema":{"description":"Data resource query request","properties":{"addOnFilter":{"allOf":[{"properties":{"operator":{"allOf":[{"enum":["AND","OR"],"type":"string"},{"default":"AND","description":"Query operator","example":"AND"}]},"rules":{"items":{"properties":{"escapeValue":{"description":"Enable character escaping for value","example":true,"type":"boolean"},"format":{"allOf":[{"properties":{"function":{"enum":["ceil","floor","round","trunc"],"type":"string"},"value":{"format":"int32","type":"integer"}},"type":"object"},{"description":"Number Format function (optional)","example":{"function":"round","value":1}}]},"operator":{"allOf":[{"enum":["AND","OR"],"type":"string"},{"description":"Operator","example":"in"}]},"property":{"description":"Resource Property","example":"property1","type":"string"},"subQuery":{"allOf":[{"properties":{"name":{"type":"string"},"type":{"enum":["local","pre_defined"],"type":"string"}},"type":"object"},{"description":"Subquery (optional)","example":{"type":"local","value":"sub_query1"}}]},"values":{"allOf":[{"items":{},"type":"array"},{"description":"Operator","example":["value1","value2"]}]}},"required":["property","operator","values","escapeValue"],"type":"object"},"type":"array"}},"type":"object"},{"description":"Add on data Filter Condition. (The existing property will be replaced)"}]},"computeDataRowsProcessed":{"description":"Flag to indicate total rows processed for query","type":"boolean"},"count":{"default":10000,"description":"Maximum number of records","example":3000,"format":"int32","maximum":10000,"minimum":1,"type":"integer"},"filter":{"allOf":[{"properties":{"operator":{"allOf":[{"enum":["AND","OR"],"type":"string"},{"default":"AND","description":"Query operator","example":"AND"}]},"rules":{"items":{"properties":{"escapeValue":{"description":"Enable character escaping for value","example":true,"type":"boolean"},"format":{"allOf":[{"properties":{"function":{"enum":["ceil","floor","round","trunc"],"type":"string"},"value":{"format":"int32","type":"integer"}},"type":"object"},{"description":"Number Format function (optional)","example":{"function":"round","value":1}}]},"operator":{"allOf":[{"enum":["AND","OR"],"type":"string"},{"description":"Operator","example":"in"}]},"property":{"description":"Resource Property","example":"property1","type":"string"},"subQuery":{"allOf":[{"properties":{"name":{"type":"string"},"type":{"enum":["local","pre_defined"],"type":"string"}},"type":"object"},{"description":"Subquery (optional)","example":{"type":"local","value":"sub_query1"}}]},"values":{"allOf":[{"items":{},"type":"array"},{"description":"Operator","example":["value1","value2"]}]}},"required":["property","operator","values","escapeValue"],"type":"object"},"type":"array"}},"type":"object"},{"description":"Filter Condition"}]},"histogram":{"allOf":[{"properties":{"alias":{"description":"Property Alias","example":"property1_alias","type":"string"},"enableEmptyInterval":{"description":"Enable filling empty record for intervals with no data","example":true,"type":"boolean"},"property":{"description":"Property","example":"property1","type":"string"},"range":{"allOf":[{"enum":["day","hour","minute","month","week","year"],"type":"string"},{"description":"Histogram Range","example":"hour"}]},"sort":{"allOf":[{"properties":{"order":{"enum":["asc","desc"],"type":"string"},"sequence":{"format":"int32","type":"integer"}},"type":"object"},{"description":"Sort Condition (optional)","example":{"order":"desc","sequence":1}}]},"value":{"description":"Histogram range value (only 1 is supported)","example":1,"format":"int32","type":"integer"}},"required":["property","range"],"type":"object"},{"description":"Histogram Condition"}]},"includeRecordNumber":{"description":"Flag to indicate add row number to response","type":"boolean"},"properties":{"allOf":[{"items":{"properties":{"alias":{"description":"Property Alias (Name to include in response)","example":"my_property1_name","type":"string"},"format":{"allOf":[{"properties":{"function":{"enum":["ceil","floor","round","trunc"],"type":"string"},"value":{"format":"int32","type":"integer"}},"type":"object"},{"description":"Number Format function (optional)","example":{"function":"round","value":1}}]},"function":{"allOf":[{"enum":["ceil","floor","round","trunc"],"type":"string"},{"description":"Aggregation function (Applicable only to metric properties)","example":"count"}]},"property":{"description":"Property","example":"property1","type":"string"},"sort":{"allOf":[{"properties":{"order":{"enum":["asc","desc"],"type":"string"},"sequence":{"format":"int32","type":"integer"}},"type":"object"},{"description":"Sort Condition (optional)","example":{"order":"desc","sequence":1}}]}},"required":["property"],"type":"object"},"type":"array"},{"description":"Resource properties","example":[{"property":"property1"},{"function":"sum","property":"property2","sort":{"order":"desc","sequence":1}},{"alias":"average_property3","function":"avg","property":"property3"}]}]}},"required":["properties","filter"],"type":"object"}}},"description":"\n\nThe JSON request object\n","required":true},"responses":{"200":{"content":{"application/json":{"schema":{"description":"Resource Request response","properties":{"data":{"allOf":[{"items":{"properties":{"empty":{"type":"boolean"}},"type":"object"},"type":"array"},{"description":"Response Data","example":[{"average_property3":10.75,"property1":"value1","property2":10},{"average_property3":20.99,"property1":"value2","property2":25}]}]},"header":{"allOf":[{"properties":{"empty":{"type":"boolean"}},"type":"object"},{"description":"Response header","example":{"createdAt":"Fri Jan  1 00:00:00 PST 2021","name":"Response Name","requestId":"123e4567-e89b-12d3-a456-426614174000"}}]}},"required":["header","data"],"type":"object"}}},"description":"List of data objects"},"400":{"content":{"application/json":{"schema":{"description":"Error Response","example":{"details":"Resource property 'property1' is not valid","errorCode":"DATA10002","message":"Invalid Resource property name","values":["property1"]},"properties":{"details":{"description":"Error details","example":"Input value 'property1' is not valid","type":"string"},"errorCode":{"description":"Error code","example":"REST10001","type":"string"},"message":{"description":"Error Message","example":"Invalid input","type":"string"},"values":{"allOf":[{"items":{"type":"string"},"type":"array"},{"description":"Values in error details. Used to construct error in different language","example":["property1"]}]}},"required":["errorCode","message","details","values"],"type":"object"}}},"description":"\nInvalid Resource Query request responses\n\n1. Invalid Resource property name (Error code: DATA10002)\n2. Invalid Resource request parameter (Error code: DATA10003)\n3. The resource or property is not licensed (Error code: DATA10004)\n\n"},"403":{"content":{"application/json":{"schema":{"description":"Error Response","example":{"details":"Permission Denied","errorCode":"REST10003","message":"Permission Denied","values":["value1"]},"properties":{"details":{"description":"Error details","example":"Input value 'property1' is not valid","type":"string"},"errorCode":{"description":"Error code","example":"REST10001","type":"string"},"message":{"description":"Error Message","example":"Invalid input","type":"string"},"values":{"allOf":[{"items":{"type":"string"},"type":"array"},{"description":"Values in error details. Used to construct error in different language","example":["property1"]}]}},"required":["errorCode","message","details","values"],"type":"object"}}},"description":"\nPermission response\n\n1. Permission Denied (Error code: REST10003)\n\n"},"404":{"content":{"application/json":{"schema":{"description":"Error Response","example":{"details":"Resource not found","errorCode":"REST10002","message":"Resource not found","values":["value1"]},"properties":{"details":{"description":"Error details","example":"Input value 'property1' is not valid","type":"string"},"errorCode":{"description":"Error code","example":"REST10001","type":"string"},"message":{"description":"Error Message","example":"Invalid input","type":"string"},"values":{"allOf":[{"items":{"type":"string"},"type":"array"},{"description":"Values in error details. Used to construct error in different language","example":["property1"]}]}},"required":["errorCode","message","details","values"],"type":"object"}}},"description":"\nResource not available response\n\n1. Resource not found (Error code: REST10002)\n\n"},"500":{"content":{"application/json":{"schema":{"description":"Error Response","example":{"details":"Failed to process request","errorCode":"REST10001","message":"Unexpected server error","values":["value1"]},"properties":{"details":{"description":"Error details","example":"Input value 'property1' is not valid","type":"string"},"errorCode":{"description":"Error code","example":"REST10001","type":"string"},"message":{"description":"Error Message","example":"Invalid input","type":"string"},"values":{"allOf":[{"items":{"type":"string"},"type":"array"},{"description":"Values in error details. Used to construct error in different language","example":["property1"]}]}},"required":["errorCode","message","details","values"],"type":"object"}}},"description":"\nUnexpected server error response\n\n1. Unexpected server error (Error code: REST10001)\n\n"}},"tags":["DataResourceCustom"],"method":"post","path":"/api/sase/v2.0/resource/custom/query/{feature_name}/{request_name}","servers":[{"url":"https://pa-us.api.prismaaccess.com"}],"jsonRequestBodyExample":{"addOnFilter":{"operator":{},"rules":[{"escapeValue":true,"format":{"function":"ceil","value":0},"operator":{},"property":"property1","subQuery":{"name":"string","type":"local"},"values":{}}]},"computeDataRowsProcessed":true,"count":3000,"filter":{"operator":{},"rules":[{"escapeValue":true,"format":{"function":"ceil","value":0},"operator":{},"property":"property1","subQuery":{"name":"string","type":"local"},"values":{}}]},"histogram":{"alias":"property1_alias","enableEmptyInterval":true,"property":"property1","range":{},"sort":{"order":"asc","sequence":0},"value":1},"includeRecordNumber":true,"properties":{}},"info":{"contact":{},"description":"Manages custom data resources.\n","title":"Data Resource - Custom","version":"2.0"},"postman":{"name":"Custom resource query","description":{"content":"Retrieves information about a custom resource. \nThe following feature/resource name combinations are supported:\n\n* mobileusers/mu_concurrent_connected_status\n\n  Provides data on connected mobile users.\n\n* locations/location_mobilegateways_status\n\n  Provides data on mobile users service availability.\n","type":"text/plain"},"url":{"path":["api","sase","v2.0","resource","custom","query",":feature_name",":request_name"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) ","type":"text/plain"},"type":"any","value":"","key":"feature_name"},{"disabled":false,"description":{"content":"(Required) Name of the custom request.","type":"text/plain"},"type":"any","value":"","key":"request_name"},{"disabled":false,"description":{"content":"(Required) Unique tenant ID.","type":"text/plain"},"type":"any","value":"","key":"tenant_id"}]},"header":[{"disabled":false,"description":{"content":"Sub-tenant ID. This parameter is required only if a sub-tenant is configured.","type":"text/plain"},"key":"Prisma-SubTenant","value":""},{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}}}}
sidebar_class_name: "post api-method"
---

import ParamsItem from "@theme/ParamsItem";
import SchemaItem from "@theme/SchemaItem"
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

## Custom resource query



Retrieves information about a custom resource. 
The following feature/resource name combinations are supported:

* mobileusers/mu_concurrent_connected_status

  Provides data on connected mobile users.

* locations/location_mobilegateways_status

  Provides data on mobile users service availability.


<details style={{"marginBottom":"1rem"}}><summary style={{}}><strong>Path Parameters</strong></summary><div><ul><ParamsItem className={"paramsItem"} param={{"in":"path","name":"feature_name","required":true,"schema":{"type":"string"}}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"content":{"*/*":{"schema":{"enum":["query1","query2"]}}},"description":"Name of the custom request.","in":"path","name":"request_name","required":true}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"description":"Unique tenant ID.","in":"path","name":"tenant_id","required":true,"schema":{"type":"string"}}}></ParamsItem></ul></div></details><details style={{"marginBottom":"1rem"}}><summary style={{}}><strong>Header Parameters</strong></summary><div><ul><ParamsItem className={"paramsItem"} param={{"description":"Sub-tenant ID. This parameter is required only if a sub-tenant is configured.","in":"header","name":"Prisma-SubTenant","required":false,"schema":{"type":"string"}}}></ParamsItem></ul></div></details><details style={{}}><summary style={{"textAlign":"left"}}><strong>Request Body</strong><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}><div style={{"marginTop":"1rem","marginBottom":"1rem"}}>



The JSON request object


</div></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>addOnFilter</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}><SchemaItem collapsible={false} name={"operator"} required={false} schemaDescription={"Query operator"} schemaName={"string"} qualifierMessage={"**Possible values:** [`AND`, `OR`]"}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>rules</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><ul><SchemaItem collapsible={false} name={"escapeValue"} required={true} schemaDescription={"Enable character escaping for value"} schemaName={"boolean"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>format</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Number Format function (optional)

</div><ul><SchemaItem collapsible={false} name={"function"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={"**Possible values:** [`ceil`, `floor`, `round`, `trunc`]"}></SchemaItem><SchemaItem collapsible={false} name={"value"} required={false} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined}></SchemaItem></ul></div></details></SchemaItem><SchemaItem collapsible={false} name={"operator"} required={true} schemaDescription={"Operator"} schemaName={"string"} qualifierMessage={"**Possible values:** [`AND`, `OR`]"}></SchemaItem><SchemaItem collapsible={false} name={"property"} required={true} schemaDescription={"Resource Property"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>subQuery</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Subquery (optional)

</div><ul><SchemaItem collapsible={false} name={"name"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"type"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={"**Possible values:** [`local`, `pre_defined`]"}></SchemaItem></ul></div></details></SchemaItem><SchemaItem collapsible={false} name={"values"} required={true} schemaDescription={"Operator"} schemaName={"array"} qualifierMessage={undefined}></SchemaItem></ul></div></details></SchemaItem></ul></div></div></details></SchemaItem><SchemaItem collapsible={false} name={"computeDataRowsProcessed"} required={false} schemaDescription={"Flag to indicate total rows processed for query"} schemaName={"boolean"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"count"} required={false} schemaDescription={"Maximum number of records"} schemaName={"int32"} qualifierMessage={"**Possible values:** 1 ≤ value ≤ 10000"}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>filter</strong><span style={{"opacity":"0.6"}}> object</span><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}><SchemaItem collapsible={false} name={"operator"} required={false} schemaDescription={"Query operator"} schemaName={"string"} qualifierMessage={"**Possible values:** [`AND`, `OR`]"}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>rules</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><ul><SchemaItem collapsible={false} name={"escapeValue"} required={true} schemaDescription={"Enable character escaping for value"} schemaName={"boolean"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>format</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Number Format function (optional)

</div><ul><SchemaItem collapsible={false} name={"function"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={"**Possible values:** [`ceil`, `floor`, `round`, `trunc`]"}></SchemaItem><SchemaItem collapsible={false} name={"value"} required={false} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined}></SchemaItem></ul></div></details></SchemaItem><SchemaItem collapsible={false} name={"operator"} required={true} schemaDescription={"Operator"} schemaName={"string"} qualifierMessage={"**Possible values:** [`AND`, `OR`]"}></SchemaItem><SchemaItem collapsible={false} name={"property"} required={true} schemaDescription={"Resource Property"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>subQuery</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Subquery (optional)

</div><ul><SchemaItem collapsible={false} name={"name"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"type"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={"**Possible values:** [`local`, `pre_defined`]"}></SchemaItem></ul></div></details></SchemaItem><SchemaItem collapsible={false} name={"values"} required={true} schemaDescription={"Operator"} schemaName={"array"} qualifierMessage={undefined}></SchemaItem></ul></div></details></SchemaItem></ul></div></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>histogram</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}><SchemaItem collapsible={false} name={"alias"} required={false} schemaDescription={"Property Alias"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"enableEmptyInterval"} required={false} schemaDescription={"Enable filling empty record for intervals with no data"} schemaName={"boolean"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"property"} required={true} schemaDescription={"Property"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"range"} required={true} schemaDescription={"Histogram Range"} schemaName={"string"} qualifierMessage={"**Possible values:** [`day`, `hour`, `minute`, `month`, `week`, `year`]"}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>sort</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Sort Condition (optional)

</div><ul><SchemaItem collapsible={false} name={"order"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={"**Possible values:** [`asc`, `desc`]"}></SchemaItem><SchemaItem collapsible={false} name={"sequence"} required={false} schemaDescription={undefined} schemaName={"int32"} qualifierMessage={undefined}></SchemaItem></ul></div></details></SchemaItem><SchemaItem collapsible={false} name={"value"} required={false} schemaDescription={"Histogram range value (only 1 is supported)"} schemaName={"int32"} qualifierMessage={undefined}></SchemaItem></ul></div></div></details></SchemaItem><SchemaItem collapsible={false} name={"includeRecordNumber"} required={false} schemaDescription={"Flag to indicate add row number to response"} schemaName={"boolean"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>properties</strong><span style={{"opacity":"0.6"}}> object</span><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}></ul></div></div></details></SchemaItem></ul></details><div><Tabs><TabItem label={"200"} value={"200"}><div>

List of data objects

</div><div><details style={{}}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>data</strong><span style={{"opacity":"0.6"}}> object</span><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}></ul></div></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>header</strong><span style={{"opacity":"0.6"}}> object</span><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}><SchemaItem collapsible={false} name={"empty"} required={false} schemaDescription={undefined} schemaName={"boolean"} qualifierMessage={undefined}></SchemaItem></ul></div></div></details></SchemaItem></ul></details></div></TabItem><TabItem label={"400"} value={"400"}><div>


Invalid Resource Query request responses

1. Invalid Resource property name (Error code: DATA10002)
2. Invalid Resource request parameter (Error code: DATA10003)
3. The resource or property is not licensed (Error code: DATA10004)



</div><div><details style={{}}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"details"} required={true} schemaDescription={"Error details"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"errorCode"} required={true} schemaDescription={"Error code"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"message"} required={true} schemaDescription={"Error Message"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>values</strong><span style={{"opacity":"0.6"}}> object</span><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}></ul></div></div></details></SchemaItem></ul></details></div></TabItem><TabItem label={"403"} value={"403"}><div>


Permission response

1. Permission Denied (Error code: REST10003)



</div><div><details style={{}}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"details"} required={true} schemaDescription={"Error details"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"errorCode"} required={true} schemaDescription={"Error code"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"message"} required={true} schemaDescription={"Error Message"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>values</strong><span style={{"opacity":"0.6"}}> object</span><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}></ul></div></div></details></SchemaItem></ul></details></div></TabItem><TabItem label={"404"} value={"404"}><div>


Resource not available response

1. Resource not found (Error code: REST10002)



</div><div><details style={{}}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"details"} required={true} schemaDescription={"Error details"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"errorCode"} required={true} schemaDescription={"Error code"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"message"} required={true} schemaDescription={"Error Message"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>values</strong><span style={{"opacity":"0.6"}}> object</span><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}></ul></div></div></details></SchemaItem></ul></details></div></TabItem><TabItem label={"500"} value={"500"}><div>


Unexpected server error response

1. Unexpected server error (Error code: REST10001)



</div><div><details style={{}}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"details"} required={true} schemaDescription={"Error details"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"errorCode"} required={true} schemaDescription={"Error code"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={false} name={"message"} required={true} schemaDescription={"Error Message"} schemaName={"string"} qualifierMessage={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>values</strong><span style={{"opacity":"0.6"}}> object</span><strong style={{"fontSize":"var(--ifm-code-font-size)","color":"var(--openapi-required)"}}> required</strong></summary><div style={{"marginLeft":"1rem"}}><div><span className={"badge badge--info"} style={{"marginBottom":"1rem"}}>allOf</span><ul className={"allOf"}></ul></div></div></details></SchemaItem></ul></details></div></TabItem></Tabs></div>
      